added lemon file added lemon wscript now compiles and sets up lemon

--- a/Documentation.tex
+++ b/Documentation.tex
@@ -1,11 +1,46 @@
 \documentclass{report}
-
+\usepackage{color}
 \begin{document}
 \tableofcontents
 
 \chapter{Language Definition}
-\section{Syntax}
-\paragraph{Identifiers}
-Identifiers follow the syntax defined for C. That is, each identifier is case sensitive. Each identifier must start with a letter( '\_' is also allowed). After this letters, underscores and/or integers may follow in any combination.
+	\section{Syntax}
+		\subsection{Identifiers}
+			Identifiers follow the syntax defined for C. That is, each identifier is case sensitive. Each identifier must start with a letter( '\_' is also allowed). After this letters, underscores and/or integers may follow in any combination.
+
+	\subsection{Integers}
+		\paragraph{}
+			Integers are represented by a sequence of numbers(obviously).
+
+\chapter{Arithmetics / Data Operations}
+	\section{Data Types}
+		\paragraph{Integers}
+		\paragraph{Floats}
+		\paragraph{Other}
+		\paragraph{\color{red}TODO}
+			\color{red}
+			\begin{itemize}
+				\item Need to define standard integer types
+				\item Need to define standard float types
+				\item Need to define boolean type
+				\item Need to define pointer type
+				\item Need to define character type
+				\item Need to define byte type
+				\item Need to define type casting
+			\end{itemize}
+			\color{black}
+	\section{Operations}
+		
+
+
+	\section{Order of Operations}
+
+		\paragraph{\color{red}TODO}
+			\color{red}
+			\begin{itemize}
+				\item Need to define order of operations
+				\item Need to promotion and demotion of data types
+			\end{itemize}
+			\color{black}
 
 \end{document}
