added expression types to program.h added keywords to documentation

--- a/Documentation.tex
+++ b/Documentation.tex
@@ -7,6 +7,32 @@
 	\section{Syntax}
 		\subsection{Identifiers}
 			Identifiers follow the syntax defined for C. That is, each identifier is case sensitive. Each identifier must start with a letter( '\_' is also allowed). After this letters, underscores and/or integers may follow in any combination.
+		\subsection{Keywords}
+			\begin{itemize}
+				\item "if"
+				\item "return"
+				\item "true"
+				\item "false"
+				%floating point types
+				\item "float32"
+				\item "float64"
+				%boolean type
+				\item "bool"
+				\item "char"
+				%integer types
+				\item "int8"
+				\item "uint8"
+				\item "int16"
+				\item "uint16"
+				\item "int32"
+				\item "uint32"
+				\item "int"
+				\item "uint"
+				\item "int64"
+				\item "uint64"
+				
+				\item "void"
+			\end{itemize}
 
 	\subsection{Integers}
 		\paragraph{}
