Added "Integer" to lexer removed specific types from documentation, in preparation from simplification of types created complete_instruction structure removed .lock* started to work on tests

--- a/Documentation.tex
+++ b/Documentation.tex
@@ -14,22 +14,12 @@
 				\item "true"
 				\item "false"
 				%floating point types
-				\item "float32"
-				\item "float64"
+				\item "float"
 				%boolean type
 				\item "bool"
 				\item "char"
 				%integer types
-				\item "int8"
-				\item "uint8"
-				\item "int16"
-				\item "uint16"
-				\item "int32"
-				\item "uint32"
 				\item "int"
-				\item "uint"
-				\item "int64"
-				\item "uint64"
 				
 				\item "void"
 			\end{itemize}
