--- a/Documentation/main.tex
+++ b/Documentation/main.tex
@@ -6,6 +6,7 @@
 \usepackage{standalone}
 \usepackage{hyperref}
 \usepackage{color}
+\usepackage{syntax}
 
 \newcommand{\tab}{\hspace*{2em}}
 
@@ -16,13 +17,7 @@
 \tableofcontents
 
 \input{LanguageReference.tex}
-
-\chapter{Compiler}
-	\subsection{Lexer}
-		The
-	\subsection{Lemon}
-
-
+\input{CompilerReference.tex}
 \input{InterpreterReference.tex}
 \input{ByteCodeReference.tex}
 
