--- a/Documentation/main.tex
+++ b/Documentation/main.tex
@@ -12,15 +12,20 @@
 
 \hypersetup{linktocpage}
 
+\title{"Language" Documentation}
+\date{\today}
+\author{Joseph Stanton}
+
 
 \begin{document}
+\maketitle
 \tableofcontents
 
 \input{LanguageReference.tex}
 \input{CompilerReference.tex}
 \input{InterpreterReference.tex}
 \input{ByteCodeReference.tex}
-
+\input{Todo.tex}
 
 \begin{comment}
 \chapter{Interpreter}
